# discord-kintai

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  attendance.db
.github/workflows/: ci.yml  deploy.yml  deps.yml
src/: config.rs  main.rs
src/bot/: mod.rs
src/bot/commands/: attendance.rs  mod.rs  reports.rs  status.rs
src/bot/handlers/: mod.rs
src/bot/interactions/: mod.rs  status_buttons.rs
src/database/: migrations.rs  mod.rs  models.rs  queries.rs  queries_simple.rs
src/utils/: format.rs  mod.rs  record_selector.rs  record_validator.rs  session_manager.rs  time.rs  validation.rs
