[package]
name = "discord-kintai"
version = "0.1.0"
edition = "2024"
description = "Discord bot for attendance tracking"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
poise = {git = "https://github.com/serenity-rs/poise.git"}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
